# BooksFastAPI

./: .coverage  .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app_factory.py  create_tables.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  settings.py
.github/workflows/: build.yml  coverage.yml  integration.yml
app/: .dev.env  .example.env  app_factory.py  create_tables.py  logger.py  pyproject.toml  settings.py
app/src/: app.py
app/src/api/: dependencies.py  exceptions.py  models.py
app/src/core/: security.py
app/src/db/: __init__.py  session.py
app/src/schemas/: __init__.py  book.py  review.py  user.py
app/src/services/: __init__.py  authentication_service.py  book_service.py  external_api_service.py  factories.py  logger.py
app/tests/integration/: conftest.py  fake_mock_data.py  test_check_endpoints.py  test_endpoints_books.py  test_endpoints_login.py
app/tests/unit/: mock_io_data.py  test_authentication_service.py  test_base_services.py  test_book_service.py  test_external_api_service.py
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: start_local_project.sh  start_project.sh
src/api/: controllers.py
src/db/models/: users.py
src/db/repositories/: __init__.py  unit_of_work.py
src/services/: __init__.py
tests/integration/: conftest.py  test_check_endpoints.py
tests/unit/: mock_io_data.py  test_authentication_service.py  test_base_services.py  test_book_service.py  test_external_api_service.py
(+16 files in other folders)
